@@ -99,7 +99,7 @@
         <ReturnType>System.UInt32</ReturnType>
       </ReturnValue>
       <Docs>
-        <summary>The Type for the <see cref="Dia.CanvasViewItem" /></summary>
+        <summary>Gets the type for the <see cref="Dia.CanvasViewItem" /></summary>
         <returns>A <see cref="T:System.UInt32" /> number representing the <see cref="GLib.Type" /></returns>
         <remarks></remarks>
       </Docs>
